Fehler von Html Datei behoben

--- a/Meilenstein 1/index.html
+++ b/Meilenstein 1/index.html
@@ -17,7 +17,7 @@
 			</p>
 			<ol>
 				<li>Mark Beckmann 26.09.1990</li>
-				<li>Mike Hukiewitz 20.01.1995</li><br/>
+				<li>Mike Hukiewitz 20.01.1995</li>
 			</ol>
 
 		</body>
