home datei erstellt

--- a/Meilenstein 2/player_entry.html
+++ b/Meilenstein 2/player_entry.html
@@ -2,8 +2,10 @@
 
 <html lang="de">
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+	<div id="main">
 	<h1> Spieler anlegen </h1>
 	<p>Name <input type="text" name="vorname" size"30" maxlength="40" value=""/></p>
 	<p>Vorname <input type="text" name="name" size"30" maxlength="40" value=""/></p>
@@ -26,5 +28,6 @@
 	<p>
 		<button type="button"> Absenden </button>
 	</p>
+</div>
 </body>
 </html>
