--- a/Meilenstein 2/player_entry.html
+++ b/Meilenstein 2/player_entry.html
@@ -10,88 +10,95 @@
 	<table>
 		<tr>
 			<td>
-				Name
-			</td>
-			<td>
-				<input type="text" name="vorname" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Vorname
-			</td>
-			<td> 
-				<input type="text" name="name" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Verein
-			</td>
-			<td>
-				<input type="text" name="verein" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Coach
-			</td>
-			<td>
-				<input type="text" name="hcoach" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Assistentencoach
-			</td>
-			<td>	
-				<input type="text" name="acoach" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Aktiv
-			</td>
-			<td>
-				<input type="checkbox" name="aktiv"  /> Ja<input type="checkbox" name="nein" checked="checked" /> Nein
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Position
-			</td>
-			<td>
-				<select name="position">
-					<option value="center">Center</option> 
-					<option value="guard">Guard</option> 
-					<option value="power forward">Power Forward</option> 
-					<option value="wing" selected="selected">Wing</option> 
-					<option value="small Forward">Small Forward</option> 
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Trikotnumer
-			</td>
-			<td>
-				<input type="number" name="number" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Jahrgang
-			</td>
-			<td>
-				<input type="number" name="jahr" size"30" maxlength="40" value=""/>
-			</td>
-		</tr>
-		<tr>
+		<table>
+			<tr>
+				<td>
+					Name
+				</td>
+				<td>
+					<input type="text" name="vorname" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Vorname
+				</td>
+				<td> 
+					<input type="text" name="name" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Verein
+				</td>
+				<td>
+					<input type="text" name="verein" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Coach
+				</td>
+				<td>
+					<input type="text" name="hcoach" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Assistentencoach
+				</td>
+				<td>	
+					<input type="text" name="acoach" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Aktiv
+				</td>
+				<td>
+					<input type="checkbox" name="aktiv"  /> Ja<input type="checkbox" name="nein" checked="checked" /> Nein
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Position
+				</td>
+				<td>
+					<select name="position">
+						<option value="center">Center</option> 
+						<option value="guard">Guard</option> 
+						<option value="power forward">Power Forward</option> 
+						<option value="wing" selected="selected">Wing</option> 
+						<option value="small Forward">Small Forward</option> 
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Trikotnumer
+				</td>
+				<td>
+					<input type="number" name="number" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Jahrgang
+				</td>
+				<td>
+					<input type="number" name="jahr" size"30" maxlength="40" value=""/>
+				</td>
+			</tr>
+			<tr>
+			</table>
+		</td>
+		<td>
+			Favorit markieren <input type="checkbox" name="favorit" /> Ja<input type="checkbox" name="favorit" checked="checked"/> Nein
+		</td>
+
+	</tr>
+
 		</table>
-				Favorit markieren
-				<input type="checkbox" name="favorit" /> Ja<input type="checkbox" name="favorit" checked="checked"/> Nein</p>
-		
-			<p>
 		<button type="button"> Absenden </button>
 	</p>
 </div>
