HTML angepasst Favorite tabllen teil eine ID gegeben

--- a/Meilenstein 2/player_entry.html
+++ b/Meilenstein 2/player_entry.html
@@ -92,7 +92,7 @@
 			<tr>
 			</table>
 		</td>
-		<td>
+		<td id="favorite">
 			Favorit markieren <input type="checkbox" name="favorit" /> Ja<input type="checkbox" name="favorit" checked="checked"/> Nein
 		</td>
 
