Home HMTL angepasst. Bild eingefügt und Überschrift bearbeitet

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -5,5 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+	<h1>
+		<b>B</b>asketball <b>P</b>layer <b>D</b>ata<b>b</b>base
+	</h1>
+	<img src="Basketballbild.jpg" alt="Awesome Basketball on Fire"/>
 </body>
 </html>
