* CSS überarbeitet ! player_entry.html fehler gefixt

--- a/Meilenstein 2/player_entry.html
+++ b/Meilenstein 2/player_entry.html
@@ -75,7 +75,7 @@
 			</tr>
 			<tr>
 				<td>
-					Trikotnumer
+					Trikotnummer
 				</td>
 				<td>
 					<input type="number" name="number" size"30" maxlength="40" value=""/>
@@ -92,7 +92,7 @@
 			<tr>
 			</table>
 		</td>
-		<td id="favorite">
+		<td id="favourite">
 			Favorit markieren <input type="checkbox" name="favorit" /> Ja<input type="checkbox" name="favorit" checked="checked"/> Nein
 		</td>
 
