Bild geändert buttons bei home geamcht

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -5,9 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<h1>
-		<b>B</b>asketball <b>P</b>layer <b>D</b>ata<b>b</b>base
-	</h1>
-	<img src="Basketballbild.jpg" alt="Awesome Basketball on Fire"/>
+	<div id="main">
+		<h1>
+			<b>B</b>asketball <b>P</b>layer <b>D</b>ata<b>b</b>base
+		</h1>
+		<img src="basketball.jpg"/>
+		<div id="menu">
+			<div class="button2">
+				Spieler anlegen
+			</div>
+			<div class="button2">
+				Favorit
+			</div>
+			<div class="button2">
+				Registrieren
+			</div>
+		</div>
+	</div>
 </body>
 </html>
