* CSS verfeinert * Fehler im HTML behoben + CSS Validiert!

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -3,24 +3,33 @@
 <html lang="de">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<title>BPDb - Mark Beckmann & Mike Hukiewitz</title>
+	<referer>
 </head>
 <body>
 	<div id="main">
 		<h1>
-			<b>B</b>asketball <b>P</b>layer <b>D</b>ata<b>b</b>base
+			<b>B</b>asketball <b>P</b>layer <b>D</b>ata<b>b</b>ase
 		</h1>
-		<img src="basketball.jpg"/>
+		<img src="basketball.jpg" alt="Eine Silouhette eines Basketballkorbs und eines Spielers."/>
 		<div id="menu">
-			<div class="button2">
-				Spieler anlegen
-			</div>
-			<div class="button2">
-				Favorit
-			</div>
-			<div class="button2">
-				Registrieren
-			</div>
+				<div class="button2">
+					Spieler anlegen
+				</div>
+				<div class="button2">
+					Favorit
+				</div>
+				<div class="button2">
+					Registrieren
+				</div>
 		</div>
 	</div>
+	<p>
+	    <a href="http://jigsaw.w3.org/css-validator/">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="CSS ist valide!" />
+		</a>
+	</p>
 </body>
 </html>
