html geändert keine tabellen mehr :O

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -14,7 +14,7 @@
 		<img src="basketball.jpg" alt="Eine Silouhette eines Basketballkorbs und eines Spielers."/>
 		<div id="menu">
 				<div class="button2">
-					Spieler anlegen
+				<a href="player_entry.html">Spieler anlegen</a>
 				</div>
 				<div class="button2">
 					Favorit
