css angepasst für tablebuttons

--- a/Meilenstein 4/player_detail.html
+++ b/Meilenstein 4/player_detail.html
@@ -11,8 +11,10 @@
 <body>
 	<div id="main">
 		<h1> Meine Spieler </h1>
-	
-
+		<div id="tablebuttons">
+			<div id="tablebutton1">Alle Spieler</div>
+			<div id="tablebutton2">Favoriten</div>
+		</div>
 		<div id="table01">
 		</div>
 	</div>
