css und html gemacht

--- a/Meilenstein 4/player_detail.html
+++ b/Meilenstein 4/player_detail.html
@@ -12,8 +12,8 @@
 	<div id="main">
 		<h1> Meine Spieler </h1>
 		<div id="tablebuttons">
-			<div id="tablebutton1">Alle Spieler</div>
-			<div id="tablebutton2">Favoriten</div>
+			<div id="outer1"><div id="tablebutton1">Alle Spieler</div></div>
+			<div id="outer2"><div id="tablebutton2">Favoriten</div></div>
 		</div>
 		<div id="table01">
 		</div>
