* HTML validiert & aufgeräumt

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -4,7 +4,6 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<title>BPDb - Mark Beckmann & Mike Hukiewitz</title>
-	<referer>
 </head>
 <body>
 	<div id="main">
@@ -17,7 +16,7 @@
 				<a href="player_entry.html">Spieler anlegen</a>
 				</div>
 				<div class="button2">
-					Favorit
+					<a href="../Meilenstein%204/player_detail.html">Favoriten</a>
 				</div>
 				<div class="button2">
 					Registrieren
