--- a/Meilenstein 4/player_detail.html
+++ b/Meilenstein 4/player_detail.html
@@ -3,14 +3,16 @@
 <html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../Meilenstein 2/style.css"/>
+	<title>BPDb - Mark Beckmann & Mike Hukiewitz</title>
+	<link rel="stylesheet" type="text/css" href="../Meilenstein%202/style.css"/>
 	<script type="text/javascript" src="player_detail.js">
 	</script>
 
 </head>
 <body>
 	<div id="main">
-		<h1> Meine Spieler </h1>
+		<h1>Meine Spieler</h1>
+		<h2><a href="../Meilenstein%202/home.html">Zurück</a></h2>
 		<div id="tablebuttons">
 			<div id="outer1"><button id="tableButton1" onClick="onClick(this);">Alle Spieler</button></div>
 			<div id="outer2"><button id="tableButton2" onClick="onClick(this);">Favoriten</button></div>
