* Menüpunkte klickbarer gemacht

--- a/Meilenstein 2/home.html
+++ b/Meilenstein 2/home.html
@@ -12,12 +12,16 @@
 		</h1>
 		<img src="basketball.jpg" alt="Eine Silouhette eines Basketballkorbs und eines Spielers."/>
 		<div id="menu">
+			<a href="player_entry.html">
 				<div class="button2">
-				<a href="player_entry.html">Spieler anlegen</a>
+				Spieler anlegen
 				</div>
+			</a>
+			<a href="../Meilenstein%204/player_detail.html">
 				<div class="button2">
-					<a href="../Meilenstein%204/player_detail.html">Favoriten</a>
+					Favoriten
 				</div>
+			</a>
 				<div class="button2">
 					Registrieren
 				</div>
