! JavaScript Eingabe-Ausnahmen gefixt * Eingabeformular aufgeräumt

--- a/Meilenstein 4/player_detail.html
+++ b/Meilenstein 4/player_detail.html
@@ -12,13 +12,14 @@
 <body>
 	<div id="main">
 		<h1>Meine Spieler</h1>
-		<h2><a href="../Meilenstein%202/home.html">Zurück</a></h2>
 		<div id="tablebuttons">
 			<div id="outer1"><button id="tableButton1" onClick="onClick(this);">Alle Spieler</button></div>
 			<div id="outer2"><button id="tableButton2" onClick="onClick(this);">Favoriten</button></div>
 		</div>
 		<div id="table01">
 		</div>
+
+		<a href="../Meilenstein%202/home.html"><h2>Zurück</h2></a>
 	</div>
 </body>
 </html>
