* Jeder Meilenstein hat jetzt alle vorhergehenden Files im eigenen Ordner und verweist auf diese

--- a/Meilenstein 3/home.html
+++ b/Meilenstein 3/home.html
@@ -17,7 +17,7 @@
 				Spieler anlegen
 				</div>
 			</a>
-			<a href="player_detail.html">
+			<a href="../Meilenstein%204/player_detail.html">
 				<div class="button2">
 					Favoriten
 				</div>
