--- a/Meilenstein 4/player_detail.html
+++ b/Meilenstein 4/player_detail.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BPDb - Mark Beckmann & Mike Hukiewitz</title>
-	<link rel="stylesheet" type="text/css" href="../Meilenstein%202/style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<script type="text/javascript" src="player_detail.js">
 	</script>
 
@@ -19,7 +19,7 @@
 		<div id="table01">
 		</div>
 
-		<a href="../Meilenstein%202/home.html"><h2>Zurück</h2></a>
+		<a href="home.html"><h2>Zurück</h2></a>
 	</div>
 </body>
 </html>
