+EntryServer.js hat nun eine Funktion

--- a/Meilenstein 5/html/player_entry.html
+++ b/Meilenstein 5/html/player_entry.html
@@ -12,7 +12,7 @@
 	<div id="main">
 		<h1> Spieler anlegen </h1>
 
-		<form id="player_entry" name="playerentry" action="127.0.0.1:1337" method="get">
+		<form id="player_entry" name="playerentry" action="127.0.0.1:1337/player_entry" method="get">
 
 			<div id="inputdata">
 				<label for="name">Name</label>
