--- a/Meilenstein 6/html/player_detail.html
+++ b/Meilenstein 6/html/player_detail.html
@@ -13,8 +13,8 @@
 	<div id="main">
 		<h1>Meine Spieler</h1>
 		<div id="tablebuttons">
-			<div id="outer1"><button id="tableButton1" onClick="onClick(this);">Alle Spieler</button></div>
-			<div id="outer2"><button id="tableButton2" onClick="onClick(this);">Favoriten</button></div>
+			<div id="outer1"><button id="tableButton1" onClick="allPlayers()">Alle Spieler</button></div>
+			<div id="outer2"><button id="tableButton2" onClick="favorites()">Favoriten</button></div>
 		</div>
 		<div id="table01">
 		</div>
